2002-01-03  Havoc Pennington  <hp@pobox.com>

	* gconf.m4: Add quotes to
	GCONF_SCHEMA_FILE_DIR='$(sysconfdir)/gconf/schemas' so that "make
	install sysconfdir=/foo" will work. May break some conceivable 
	usage of this variable.

2001-12-22  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added portuguese (pt) to ALL_LINGUAS

2001-12-17  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-listeners.c: reference count the listeners, make a
	copy of listener lists and ref all listeners prior to doing the
	notifies, to minimize reentrancy screwups.

2001-12-17  Josh Barrow  <drleary@mac.com>

	* examples/basic-gconf-app.c:
	s/GLIB_DISABLE_DEPRECATED/G_DISABLE_DEPRECATED/

2001-12-17  Darin Adler  <darin@bentspoon.com>

	* doc/gconf/.cvsignore:
	* examples/.cvsignore:
	Update.

2001-12-11  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (drop_old_clients): fix this

	* gconf/gconf-database.c (client_alive_predicate): fix spelling in
	log message

2001-12-11  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (drop_old_clients): use
	CORBA_Object_non_existent() instead of ConfigListener_ping

	* gconf/gconf-database.c (client_alive_predicate): use
	CORBA_Object_non_existent() instead of ConfigListener_ping

2001-12-11  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf.c (gconf_engine_get_default): change to not start
	gconfd immediately, so we can avoid starting it if 
	we're just going to shut it down, and just generally do 
	things lazily.
	(gconf_shutdown_daemon): ignore NO_SERVER error code

	* backends/xml-dir.c (dir_get_value): always get schema name, not
	just if value is unset

	* gconf/gconfd.c (main): don't free logname since there are atexit
	handlers for now

	* gconf/gconf-sources.c (gconf_sources_query_value): don't look
	for a default value for the schema. Useless and adds a bit of
	inefficiency.

	* gconf/gconfd.c (main): set log handler for GLib
	(log_handler): mask extra flags out of log level
